# mise

./: .gitignore  README.md  pyproject.toml
src/mise/: cli.py  messages.py
src/mise/agent/: claude_agent.py  stub_agent.py
src/mise/audio/: __init__.py  gate.py
src/mise/blueprints/: browser.py  sim.py
src/mise/core/: __init__.py  blueprint.py  module.py  skill.py  stream.py
src/mise/memory/: __init__.py  temporal.py
src/mise/perception/: mic_voice.py  pan_render.py  sim_stove.py  stdin_voice.py
src/mise/server/: app.py  bridge.py  https.py
src/mise/server/static/: app.js  index.html  styles.css
src/mise/skills/: burner.py  cook_plan.py  notify.py  shelly_burner.py  sous_chef.py
website/: package-lock.json  package.json  tailwind.config.ts
website/app/: globals.css  layout.tsx  page.tsx
website/components/ui/: badge.tsx  button.tsx  card.tsx
